@@ -7,6 +7,7 @@ import(XML)
 
 export(
        "activateCluster",
+       "DataframeSource",
        "deactivateCluster",
        "stemCompletion",
        "getFilters",
@@ -160,6 +161,7 @@ exportClasses("TextDocument",
               "TermDocMatrix",
               "Dictionary",
               "Source",
+              "DataframeSource",
               "DirSource",
               "VectorSource",
               "CSVSource",
