@@ -1,7 +1,7 @@
 # Author: Ingo Feinerer
 
 getSources <- function()
-   c("CSVSource", "DirSource", "GmaneSource", "ReutersSource", "URISource", "VectorSource")
+   c("CSVSource", "DataframeSource", "DirSource", "GmaneSource", "ReutersSource", "URISource", "VectorSource")
 
 # Source objects
 
@@ -18,10 +18,14 @@ setClass("VectorSource",
          representation(Content = "vector"),
          contains = c("Source"))
 
+# A data frame where each row is interpreted as document
+setClass("DataframeSource",
+         representation(Content = "data.frame"),
+         contains = c("Source"))
+
 # A single document identified by a Uniform Resource Identifier
 setClass("URISource",
-         representation(URI = "call",
-                        Content = "character"),
+         representation(URI = "call"),
          contains = c("Source"))
 
 # A directory with files
@@ -59,6 +63,10 @@ setMethod("VectorSource",
                   DefaultReader = readPlain, Encoding = encoding, Length = length(object))
           })
 
+DataframeSource<- function(object, encoding = "UTF-8")
+    new("DataframeSource", LoDSupport = FALSE, Content = object, Position = 0,
+        DefaultReader = readPlain, Encoding = encoding, Length = nrow(object))
+
 setGeneric("DirSource", function(directory, encoding = "UTF-8", recursive = FALSE) standardGeneric("DirSource"))
 setMethod("DirSource",
           signature(directory = "character"),
@@ -74,13 +82,11 @@ setGeneric("URISource", function(object, encoding = "UTF-8") standardGeneric("UR
 setMethod("URISource", signature(object = "character"),
           function(object, encoding = "UTF-8")
               new("URISource", LoDSupport = TRUE, URI = substitute(file(object, encoding = encoding)),
-                  Content = readLines(object, encoding = encoding), Position = 0, DefaultReader = readPlain,
-                  Encoding = encoding, Length = 1))
+                  Position = 0, DefaultReader = readPlain, Encoding = encoding, Length = 1))
 setMethod("URISource", signature(object = "connection"),
           function(object, encoding = "UTF-8")
               new("URISource", LoDSupport = TRUE, URI = match.call()$object,
-                  Content = readLines(object), Position = 0, DefaultReader = readPlain,
-                  Encoding = encoding, Length = 1))
+                  Position = 0, DefaultReader = readPlain, Encoding = encoding, Length = 1))
 
 setGeneric("CSVSource", function(object, encoding = "UTF-8") standardGeneric("CSVSource"))
 setMethod("CSVSource",
@@ -151,20 +157,17 @@ setMethod("GmaneSource",
           })
 
 setGeneric("stepNext", function(object) standardGeneric("stepNext"))
-setMethod("stepNext",
-          signature(object = "Source"),
+setMethod("stepNext", signature(object = "Source"),
           function(object) {
               object@Position <- object@Position + 1
               object
           })
 
 setGeneric("getElem", function(object) standardGeneric("getElem"))
-setMethod("getElem",
-          signature(object = "VectorSource"),
-          function(object) {
-              list(content = object@Content[object@Position],
-                   uri = NULL)
-          })
+setMethod("getElem", signature(object = "VectorSource"),
+          function(object) list(content = object@Content[object@Position], uri = NULL))
+setMethod("getElem", signature(object = "DataframeSource"),
+          function(object) list(content = object@Content[object@Position, ], uri = NULL))
 setMethod("getElem",
           signature(object = "DirSource"),
           function(object) {
@@ -174,7 +177,7 @@ setMethod("getElem",
                    uri = substitute(file(filename, encoding = encoding)))
           })
 setMethod("getElem", signature(object = "URISource"),
-          function(object) list(content = object@Content, uri = object@URI))
+          function(object) list(content = readLines(eval(object@URI)), uri = object@URI))
 setMethod("getElem",
           signature(object = "CSVSource"),
           function(object) {
@@ -207,6 +210,8 @@ setMethod("getElem",
 setGeneric("eoi", function(object) standardGeneric("eoi"))
 setMethod("eoi", signature(object = "VectorSource"),
           function(object) return(length(object@Content) <= object@Position))
+setMethod("eoi", signature(object = "DataframeSource"),
+          function(object) return(nrow(object@Content) <= object@Position))
 setMethod("eoi", signature(object = "DirSource"),
           function(object) return(length(object@FileList) <= object@Position))
 setMethod("eoi", signature(object = "URISource"),
