@@ -3,6 +3,7 @@
 \alias{eoi}
 \alias{eoi-methods}
 \alias{eoi,DirSource-method}
+\alias{eoi,DataframeSource-method}
 \alias{eoi,CSVSource-method}
 \alias{eoi,URISource-method}
 \alias{eoi,ReutersSource-method}
@@ -14,6 +15,8 @@
 }
 \section{Methods}{
   \describe{
+    \item{object = "DataframeSource"}{returns \code{TRUE} if the last item has
+      been reached.}
     \item{object = "DirSource"}{returns \code{TRUE} if the last item has
       been reached.}
     \item{object = "URISource"}{returns \code{TRUE} if the last item has
