@@ -2,6 +2,7 @@
 \docType{methods}
 \alias{getElem}
 \alias{getElem-methods}
+\alias{getElem,DataframeSource-method}
 \alias{getElem,DirSource-method}
 \alias{getElem,URISource-method}
 \alias{getElem,CSVSource-method}
@@ -14,6 +15,7 @@
 }
 \section{Methods}{
   \describe{
+    \item{object = "DataframeSource"}{Returns the element at current position from the source.}
     \item{object = "DirSource"}{Returns the element at current position from the source.}
     \item{object = "CSVSource"}{Returns the element at current position from the source.}
     \item{object = "ReutersSource"}{Returns the element at current position from the source.}
